--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/png" href="/fav.png" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cripto Pixel</title>
+    <meta name="theme-color" content="#0098db" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet" />
